--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -44,8 +44,8 @@
                                                 <td>@item.UpdatedAt</td>
                                                 <td>@item.Status</td>
                                                 <td>
-                                                    <button class="button button1">@Html.ActionLink("Confirm", "Edit", new { id = item.Id })</button>
-                                                    <button class="button button2">
+                                                    <button class="btn btn-success">@Html.ActionLink("Confirm", "Edit", new { id = item.Id })</button>
+                                                    <button class="btn btn-primary">
                                                         @if (@item.Insurance.Id == 16)
                                                         {
                                                             @Html.RouteLink("Detail", new { action = "Index", controller = "MotorInsurances", Id = item.Id })
@@ -55,7 +55,7 @@
                                                             @Html.RouteLink("Detail", new { action = "Index", controller = "HouseInsurances", Id = item.Id })
                                                         }
                                                     </button>
-                                                    <button class="button button3">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
+                                                    <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
                                                 </td>    
                                                 </tr>
                                             }
