--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Create.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<Project_sem_3.Models.InsurancePackage>
-@using Project_sem_3.Models
+﻿@model  Project_sem_3.Models.InsurancePackage
+
 @{
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -8,121 +8,106 @@
 
 <div class="container">
     <form action="/Admin/InsurancePackages" method="post">
-        <div class="col-lg-9 col-md-8 col-sm-12">
-            <div class="box-border-pro">
-                <div class="frm frmpro">
-                    <div class="form-group">
-                        <div class="row">
-                            <label for="rdbPackage_0" class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Select product package</label>
-                            <div class="col-lg-8">
-                                @foreach (var item in Model)
-                                {
-                                    <div class="custom-control custom-radio">
-                                        <input type="radio" class="@item.Price" id='rdbPackage_1' value='@item.Insurance.InsurancePackages' onclick="PackageChange();" name="insurancePackageId" required />
-                                        <label class="custom-control-label" for='rdbPackage_1'><b>@String.Format("{0:c}", @item.Price) </b> @item.Description</label>
-                                    </div>
-                                }
-
-                                <i class="pad-top-5">
-                                    <span id="ctl18_lblPackageReq" class="req" style="color:Red;"></span>
-                                </i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <h4>Enter the information on the vehicle registration</h4>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Insurance ID:</label>
-                            <div class="col-lg-8">
-                                <input name="CarOwner" type="text" id="ctl18_fullname" class="form-control txt" placeholder="Insurance Id" />
-                                <i class="pad-top-5">
-                                    <span id="ctl18_lblInsuredReq" class="req" style="color:Red;"></span>
-                                </i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Name:</label>
-                            <div class="col-lg-8">
-                                <textarea name="RegisteredAddress" type="text" id="ctl18_txtAddress" class="form-control txt" placeholder="Name"></textarea>
-                                <i class="pad-top-5">
-                                    <span id="ctl18_lblAddressReq" class="req" style="color:Red;"></span>
-                                </i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group" id="divPlate" style="display: block;">
-                        <div class="row">
-                            <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Description:</label>
-                            <div class="col-lg-8">
-                                <input name="" type="text" id="ctl18_plates" class="form-control txt" placeholder="Description" />
-                                <i class="pad-top-5">
-                                    <span id="ctl18_lblPlatesReq" class="req" style="color:Red;"></span>
-                                </i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group" id="divChassis">
-                        <div class="row">
-                            <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price:</label>
-                            <div class="col-lg-8">
-                                <input name="" type="text" id="ctl18_ChassisNumber" class="form-control txt" placeholder="Price" />
-                                <i class="pad-top-5">
-                                    <span id="ctl18_lblChassisNumberReq" class="req" style="color:Red;"></span>
-                                </i>
-                            </div>
-                        </div>
-                    </div>
-                    <input type="hidden" name="quantity" value="1" />
-
-
-                    <div class="form-group">
-                        <div class="row">
-                            <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationContract:</label>
-                            <div class="col-lg-8">
-
-                                <input type="text" id="" class="form-control txt start-date " name="Duration" placeholder="DurationContract" onchange="fromdate_change();" />
-
-                                <div></div>
-                                <i class="pad-top-5"><span id="ctl18_lblFromDateReq" class="req" style="color:Red;"></span></i>
-                                <i class="pad-top-5"><span id="ctl18_lblFromDate" class="req" style="color:Red;"></span></i>
-                            </div>
-                        </div>
-                    </div>
+        <div class="box-border-pro">
+            <div class="frm frmpro">
+                <div class="form-group">
                     <div class="row">
-                        <input type="submit" value="Create" class="btn btn-success" />
+                        <label for="rdbPackage_0" class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Select product package:</label>
+                        <div class="col-lg-8">
+                            <div class="form-group">
+                               @* @Html.LabelFor(model => model.InsuranceId, "InsuranceId", htmlAttributes: new { @class = "control-label col-md-2" })*@
+                                <div class="col-md-10">
+                                    @Html.DropDownList("InsuranceId", null, htmlAttributes: new { @class = "form-control txt" })
+                                    @Html.ValidationMessageFor(model => model.InsuranceId, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            @*@foreach (var item in Model)
+                            {
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" class="@item.Price" id='rdbPackage_1' value='@item.Insurance.InsurancePackages' onclick="PackageChange();" name="insurancePackageId" required />
+                                    <label class="custom-control-label" for='rdbPackage_1'><b>@String.Format("{0:c}", @item.Price) </b> @item.Description</label>
+                                </div>
+                            }*@
+                            <i class="pad-top-5">
+                                <span class="req" style="color: Red;"></span>
+                            </i>
+                        </div>
                     </div>
                 </div>
+                @*<div class="form-group">
+                    <h4>Enter the information about Insurance Package</h4>
+                </div>*@
+                <div class="form-group">
+                    <div class="row">
+                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Insurance ID:</label>
+                        <div class="col-lg-8">
+                            <input type="text"  class="form-control txt" placeholder="Insurance Id" />
+                            <i class="pad-top-5">
+                                <span class="req" style="color:Red;"></span>
+                            </i>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="form-group" id="divPlate" style="display: block;">
+                    <div class="row">
+                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Name:</label>
+                        <div class="col-lg-8">
+                            <input  type="text" class="form-control txt" placeholder="Name" />
+                            <i class="pad-top-5">
+                                <span  class="req" style="color:Red;"></span>
+                            </i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="row">
+                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Description:</label>
+                        <div class="col-lg-8">
+                            <textarea  type="text" class="form-control txt" placeholder="Description"></textarea>
+                            <i class="pad-top-5">
+                                <span class="req" style="color:Red;"></span>
+                            </i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group" id="divChassis">
+                    <div class="row">
+                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price:</label>
+                        <div class="col-lg-8">
+                            <input type="number"  class="form-control txt" placeholder="Price" />
+                            <i class="pad-top-5">
+                                <span  class="req" style="color:Red;"></span>
+                            </i>
+                        </div>
+                    </div>
+                </div>
+                <input type="hidden" name="quantity" value="1" />
+
+
+                <div class="form-group">
+                    <div class="row">
+                        <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationContract:</label>
+                        <div class="col-lg-8">
+
+                            <input type="number" id="" class="form-control"  placeholder="DurationContract"  />
+
+                            <div></div>
+                            <i class="pad-top-5"><span  class="req" style="color:Red;"></span></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                </div>
             </div>
-        </div>
+            </div>
     </form>
 </div>
 
-@section Scripts {
-
-
-
-    <script type="text/javascript">
-        $("input[name=insurancePackageId]") // select the radio by its id
-            .change(function () { // bind a function to the change event
-                if ($(this).is(":checked")) { // check if the radio is checked
-                    var val = $(this).attr("class"); // retrieve the value
-                    var valint = parseInt(val)
-                    var tt = $('#ctl18_Promotions1_lblHasToPayPremium').attr('class')
-                    var tint = parseInt(tt)
-                    var t = valint + tint
-                    var ttt = t.toLocaleString('en-US', { style: 'currency', currency: 'USD' });
-
-                    $('#ctl18_Promotions1_lblHasToPayPremium').text(ttt)
-                }
-            });
-    </script>
-
-}
 
 @*<h2>Create</h2>
 
