--- a/Project_sem_3/Areas/Admin/Views/MotorInsurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/MotorInsurances/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button class="btn-success"> @Html.ActionLink("Create New", "Create")</button>
 </p>
 <table class="table">
     <tr>
@@ -72,9 +72,9 @@
             @Html.DisplayFor(modelItem => item.UnitPrice)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.ContractId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.ContractId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.ContractId })
+            <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.ContractId })</button> 
+            <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.ContractId })</button> 
+            <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.ContractId })</button>
         </td>
     </tr>
 }
