--- a/Project_sem_3/Areas/Admin/Views/Programmes/Details.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Details.cshtml
@@ -7,10 +7,31 @@
 
 <h2>Details</h2>
 
-<div>
+
     <h4>Programme</h4>
-    <hr />
-    <dl class="dl-horizontal">
+    <hr />    
+    <table>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>    
+
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+        </tr>  
+        <tr>
+            <td>
+                @Html.DisplayFor(model => model.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(model => model.Price)
+            </td>
+        </tr>
+    </table>
+    
+
+    @*<dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -27,9 +48,9 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
 
-    </dl>
-</div>
+    </dl>*@
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    <button class="btn btn-warning">@Html.ActionLink("Edit", "Edit", new { id = Model.Id })</button> 
+    <button class="btn btn-info">@Html.ActionLink("Back to List", "Index")</button>
 </p>
