Edit pages template

--- a/Project_sem_3/Views/Home/Index.cshtml
+++ b/Project_sem_3/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus quos cumque odio soluta harum error sequi laudantium, est nam perspiciatis eveniet maxime, esse possimus architecto sunt natus reprehenderit debitis fugit.</p>
+                    <p>Insurance is a means of protection from financial loss. It is a form of risk management, primarily used to hedge against the risk of a contingent or uncertain loss.The insured receives a contract, called the insurance policy.</p>
                     <a href="#" class="button">Get a quote</a>
                 </div>
             </div>
@@ -21,7 +21,7 @@
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus quos cumque odio soluta harum error sequi laudantium, est nam perspiciatis eveniet maxime, esse possimus architecto sunt natus reprehenderit debitis fugit.</p>
+                    <p>The amount of money charged by the insurer to the policyholder for the coverage set forth in the insurance policy is called the premium. If the insured experiences a loss which is potentially covered by the insurance policy.</p>
                     <a href="#" class="button">Get a quote</a>
                 </div>
             </div>
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus quos cumque odio soluta harum error sequi laudantium, est nam perspiciatis eveniet maxime, esse possimus architecto sunt natus reprehenderit debitis fugit.</p>
+                    <p>There is a multitude of different types of insurance policies available, and virtually any individual or business can find an insurance company willing to insure them—for a price. The most common types of personal insurance.</p>
                     <a href="#" class="button">Get a quote</a>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus quos cumque odio soluta harum error sequi laudantium, est nam perspiciatis eveniet maxime, esse possimus architecto sunt natus reprehenderit debitis fugit.</p>
+                    <p>Businesses require special types of insurance policies that insure against specific types of risks faced by a particular business. For example, a fast food restaurant needs a policy that covers damage or injury that occurs.</p>
                     <a href="#" class="button">Get a quote</a>
                 </div>
             </div>
@@ -61,28 +61,28 @@
                     <div class="feature">
                         <i class="icon-phone-24"></i>
                         <h3 class="feature-title">24 hours Service</h3>
-                        <p>Lorem ipsum dolor amet consectetur adipiscing elit do eiusmod tempor incididunt labore dolore magna aliqua.</p>
+                        <p>A firm understanding of these concepts goes a long way in helping you choose the policy that best suits your needs.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="feature">
                         <i class="icon-hotel"></i>
                         <h3 class="feature-title">Hospitality</h3>
-                        <p>Lorem ipsum dolor amet consectetur adipiscing elit do eiusmod tempor incididunt labore dolore magna aliqua.</p>
+                        <p>A firm understanding of these concepts goes a long way in helping you choose the policy that best suits your needs.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="feature">
                         <i class="icon-luggage"></i>
                         <h3 class="feature-title">Praesent pellentesque </h3>
-                        <p>Lorem ipsum dolor amet consectetur adipiscing elit do eiusmod tempor incididunt labore dolore magna aliqua.</p>
+                        <p>A firm understanding of these concepts goes a long way in helping you choose the policy that best suits your needs.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="feature">
                         <i class="icon-credit-card-hand"></i>
                         <h3 class="feature-title">Consectetur interdum</h3>
-                        <p>Lorem ipsum dolor amet consectetur adipiscing elit do eiusmod tempor incididunt labore dolore magna aliqua.</p>
+                        <p>A firm understanding of these concepts goes a long way in helping you choose the policy that best suits your needs.</p>
                     </div>
                 </div>
             </div> <!-- .row -->
@@ -182,7 +182,7 @@
                         <figure><img src="https://www.uob.com.vn/iwov-resources/images/promotion-detail/home-insurance/home-insurance-472x332.jpg" alt=""></figure>
 
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">Donec laoreet non nec aliquam pellentesque interdum</a></h2>
+                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -191,7 +191,7 @@
 
                         <figure><img style="height:184px" src="https://s.yimg.com/ny/api/res/1.2/JiFuWC.hXaGWRDJYm207zA--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9NzI4O2g9NDAw/https://media.zenfs.com/en-US/smartasset_475/b0e311a3ac7e45403c22e1848f1a072d" alt=""></figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">Donec laoreet non nec aliquam pellentesque interdum</a></h2>
+                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -201,7 +201,7 @@
                             <img style="height:184px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQh6eSyU-NdR7g5PiihqZcg5Ap7YeLcw_pai3Gfs2yans2i5chN" alt="">
                         </figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">Donec laoreet non nec aliquam pellentesque interdum</a></h2>
+                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
 
@@ -212,7 +212,7 @@
                             <img style="height:184px" src="https://3.bp.blogspot.com/-tekXkvS7yk8/V_Ocg4GinSI/AAAAAAAAAIc/wa1y6Dq5kHQOgt9onfiu5-kLZ-lN6qRdwCLcB/s1600/policybazaar-two-wheeler-insurance-online.jpg" alt="">
                         </figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">Donec laoreet non nec aliquam pellentesque interdum</a></h2>
+                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
 
@@ -227,13 +227,13 @@
             <div class="testimonial-slider">
                 <ul class="slides">
                     <li>
-                        <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quod explicabo optio quia ex odit, sequi harum voluptatibus autem. Nam autem corporis deleniti fugiat omnis itaque, quis laudantium dolor facere.<cite>John Smith</cite></blockquote>
+                        <blockquote>A policy's premium is its price, typically expressed as a monthly cost. The premium is determined by the insurer based on your or your business's risk profile, which may include creditworthiness. For example, if you own several expensive automobiles and have a history of reckless driving.<cite>John Smith</cite></blockquote>
                     </li>
                     <li>
-                        <blockquote>At doloremque, itaque molestias neque nesciunt placeat aspernatur veniam fugit enim, dolor, repudiandae a. Laborum optio dolorum qui maxime doloribus eligendi in enim minima quo? Quis tenetur eos, libero exercitationem.<cite>John Smith</cite></blockquote>
+                        <blockquote>Deductibles can apply per-policy or per-claim depending on the insurer and the type of policy. Policies with very high deductibles are typically less expensive because the high out-of-pocket expense generally results in fewer small claims.<cite>John Smith</cite></blockquote>
                     </li>
                     <li>
-                        <blockquote>Ipsam nesciunt velit voluptatem? Voluptas amet, porro eaque asperiores magni rerum vitae nulla inventore, numquam facilis doloribus placeat iure suscipit adipisci dolores modi saepe deserunt nisi. Nam, illum aperiam velit.<cite>John Smith</cite></blockquote>
+                        <blockquote>For example, if you own several expensive automobiles and have a history of reckless driving, you will likely pay more for an auto policy than someone with a single mid-range sedan and a perfect driving record.<cite>John Smith</cite></blockquote>
                     </li>
                 </ul>
             </div>
