--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Order";
 }
 
-<h2>Order</h2>
+@*<h2>Order</h2>*@
 
 @*@model IEnumerable<Project_sem_3.Models.InsurancePackage>
 @using Project_sem_3.Models
