--- a/Project_sem_3/Views/Home/MotorInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MotorInsurance.cshtml
@@ -20,7 +20,7 @@
                     <p>
                         <div class="block_button myriad_pro_semibold">
                             @*<a href="https://localhost:44362/MotorInsurance/Order">CHARGE & ORDER</a>*@
-                            <button style="background-color:red;color:white" onclick="location.href='http://www.example.com'" type="button">
+                            <button style="background-color:crimson;color:white" onclick="location.href='/MotorInsurance/Order'" type="button">
                                 Charge & Order
                             </button>
                         </div>
@@ -98,7 +98,7 @@
                     </ul>
                     <p>&nbsp;</p>
                     <div class="block_button myriad_pro_semibold">
-                        <button style="background-color:red;color:white" onclick="location.href='http://www.example.com'" type="button">
+                        <button style="background-color:crimson;color:white" onclick="location.href='/MotorInsurance/Order'" type="button">
                             Charge & Order
                         </button>
                     </div>
